# twitter_clone_api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
accounts/: urls.py  utils.py
accounts/factories/: user_factory.py
accounts/migrations/: 0001_initial.py  0002_alter_profile_avatar_alter_profile_bio_and_more.py  0002_alter_user_email_alter_user_password.py  0003_alter_profile_avatar_alter_profile_bio_and_more.py
accounts/models/: __init__.py  profile.py  user.py
accounts/serializers/: __init__.py  profile_serializer.py  user_create_serializer.py  user_detail_serializer.py  user_serializer.py  user_update_serializer.py
accounts/tests/: conftest.py
accounts/tests/tests_serializers/: test_user_create_serializer.py  test_user_detail_serializer.py  test_user_serializer.py  test_user_update_serializer.py
accounts/tests/tests_viewsets/: test_user_viewset.py
accounts/viewsets/: __init__.py  login_view.py  search_viewset.py  user_viewset.py
core/: settings.py  urls.py  utils.py  views.py
core/templates/: home.html
posting/: apps.py  signals.py  urls.py  utils.py
posting/factories/: __init__.py  comment_factory.py  like_factory.py  post_factory.py
posting/migrations/: 0001_initial.py
posting/models/: __init__.py  comment.py  like.py  post.py  share.py
posting/serializers/: __init__.py  comment_serializer.py  like_serializer.py  post_serializer.py
posting/tests/tests_serializers/: test_comment_serializer.py  (+2 more)
posting/viewsets/: __init__.py  comment_viewset.py  feed_viewset.py  like_viewset.py  post_viewset.py
(+3 files in other folders)
